# deragabu-agent

./: Cargo.toml  build-sunshine-mac.sh  build.rs  run-dev.bat  run.bat  test-client-signal.html  test-client-simple.html  test-client-v2.html  test-client-webp.html  test-client.html
docs/: ARCHITECTURE.md  CACHE.md  CLIENTS.md  FIXES.md  NEW_PROTOCOL.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  TEST_GUIDE.md  TEST_PAGE_FIX.md  WEBP.md  WEBP_LOSSLESS.md  promo.md
examples/: README.md  python_client.py
include/: deragabu_agent.h
patches/: 0001-cmake-deps-homebrew-includes.patch  0002-cmake-constants-tray-flag.patch  0003-macos-av-video-captures-cursor-no.patch  0004-macos-display-agent-overlay-control.patch  0005-macos-input-scroll-and-keyboard-fix.patch  0006-main-agent-init.patch.in  CMakeLists.txt.append.in
proto/: cursor.proto
src/: cursor_capture.rs  ffi.rs  lib.rs  main.rs  webrtc_server.rs  websocket_server.rs
src/clipboard_sync/: mod.rs
src/cursor_capture/: linux.rs  macos.rs  mod.rs  windows.rs
src/sunshine_monitor/: mod.rs  windows.rs
