[package]
name = "deragabu-agent"
version = "0.1.0"
edition = "2021"

[dependencies]

# Protobuf
prost = "0.13"

# Async runtime and WebSocket
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Windows API
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"

# Image encoding (WebP)
webp = "0.3"

# Hashing for cursor ID
blake3 = "1"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

