[package]
name = "deragabu-agent"
version = "0.1.0"
edition = "2021"

[dependencies]

# Protobuf
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebRTC (pure Rust)
webrtc = "0.11"
bytes = "1"

# HTTP signaling server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"

# Image encoding (WebP)
webp = "0.3"

# Animated WebP encoding
webp-animation = "0.9"

# Hashing for cursor ID
blake3 = "1"

# ─── Platform-specific dependencies ─────────────────────────────────────────

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xfixes"] }

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

