[package]
name = "deragabu-agent"
version = "0.1.0"
edition = "2021"

[dependencies]

# Protobuf
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }

# WebRTC (pure Rust)
webrtc = { version = "0.11", default-features = false }
bytes = "1"

# HTTP signaling server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"

# Image encoding (WebP)
webp = "0.3"

# Animated WebP encoding
webp-animation = "0.9"

# Hashing for cursor ID and clipboard dedup
blake3 = "1"

# Clipboard access (cross-platform)
arboard = "3"

# PNG encoding/decoding for clipboard images
image = { version = "0.25", default-features = false, features = ["png"] }

# ─── Platform-specific dependencies ─────────────────────────────────────────

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xfixes"] }

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

